# ontogrid

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  docker-compose.yml
src/backend/: Dockerfile  alembic.ini  ontogrid.db  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20260309_0001_catalog_and_refresh_tables.py  20260309_0002_public_semantics_tables.py  20260310_0003_semantic_layer_tables.py  20260311_0004_harmonization_and_series_identity.py  20260313_0005_saved_views_and_analysis.py
src/backend/app/: __init__.py  bootstrap.py  catalog_inventory.py  cli.py  main.py
src/backend/app/api/: router.py
src/backend/app/copilot/: __init__.py  cache.py  client.py  service.py
src/backend/app/core/: auth.py  config.py
src/backend/app/db/: __init__.py  migrations.py  models.py  seed.py  session.py
src/backend/app/domain/: __init__.py  vocabulary.py
src/backend/app/ingestion/: __init__.py  base.py  registry.py
src/backend/app/schemas/: alerts.py  analysis.py  assets.py  auth.py  cases.py  copilot.py  coverage.py  datasets.py  entities.py  graph.py  ingestion.py  insights.py  refresh_jobs.py  series.py  sources.py  views.py
src/backend/app/services/: analysis_service.py  catalog_service.py  coverage_service.py  demo_store.py  entity_profile_service.py  evidence_service.py  graph_service.py  harmonization_service.py  insight_service.py  public_data_store.py  refresh_service.py  (+5 more)
src/backend/tests/: conftest.py  test_api_catalog.py  test_app.py  test_copilot.py  test_ingestion_adapters.py  test_refresh_pipeline.py
(+98 files in other folders)
